--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,22 @@
 </head>
 <body>
 <div ng-controller="AnnouncementListCtrl as announcementList">
-
+    <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Description</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="post in announcementList.posts">
+            <th>{{post.id}}</th>
+            <th>{{post.title}}</th>
+            <th>{{post.description}}</th>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 <script src="bower_components/angular/angular.js"></script>
