--- a/app/postList.html
+++ b/app/postList.html
@@ -9,6 +9,7 @@
     <tr ng-repeat="row in postList.posts">
         <th>{{row.id}}</th>
         <th>{{row.name}}</th>
+        <th><a href="/#/details/{{row.id}}">details</a></th>
     </tr>
     </tbody>
 </table>
