--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,8 @@
         <div class="col-sm-10" id="zone">
             <a href="#" editable-select="reservation.list.selectZone" e-ng-options="s.color for s in reservation.zones">{{reservation.list.selectZone.color
                 || 'Change zone'}}</a>
+            {{reservation.list.selectZone}}
+
         </div>
     </div>
     <div class="row">
@@ -105,10 +107,10 @@
         <p>You are {{reservation.formData.firstName || 'empty' }} {{reservation.formData.lastName || 'empty'}}
             with mail: {{reservation.formData.email || 'empty'}}.</p>
 
-        <p>You set refreshment to: {{reservation.refreshments[reservation.formData.selectRefreshment.value-1].status ||
+        <p>You set refreshment to: {{reservation.refreshments[reservation.formData.selectRefreshment-1].status ||
             'not set'}}.</p>
 
-        <p>Your zone is {{reservation.zones[reservation.formData.selectZone.value -1].color || 'not set'}}
+        <p>Your zone is {{reservation.formData.selectZone.color || 'not set'}}
             with VIP set to {{reservation.formData.vip || 'empty'}}.</p>
 
         <p>Your day reservation is {{reservation.formData.date || 'empty'}}.</p>
@@ -116,7 +118,6 @@
         <p>Your comments are {{reservation.formData.comments || 'no comments'}}.</p>
     </div>
 </div>
-
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 <script src="ReservationCtrl.js"></script>
