--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,11 @@
             <div class="page-header text-center">
                 <h1>Two way</h1>
             </div>
-            <div class="thumbnail green">
-                <div class="btn btn-success" ng-repeat="element in dragDrop.container1" ng-show="element.title">{{element.title}}
+            <div class="thumbnail green" data-drop="true" data-jqyoui-options ng-model="dragDrop.container1"
+                 jqyoui-droppable="{multiple: true}">
+                <div class="btn btn-success" ng-repeat="element in dragDrop.container1" ng-show="element.title"
+                     ng-model="dragDrop.container1" data-drag="true" jqyoui-draggable="{index: $index, animate:true}"
+                     data-jqyoui-options="{revert: 'invalid'}">{{element.title}}
                 </div>
             </div>
         </div>
@@ -24,16 +27,20 @@
             <div class="page-header text-center">
                 <h1>One way</h1>
             </div>
-            <div class="thumbnail red">
-                <div class="btn btn-danger" ng-repeat="element in dragDrop.container2" ng-show="element.title">{{element.title}}
+            <div class="thumbnail red" data-drop="true" data-jqyoui-options ng-model="dragDrop.container2"
+                 jqyoui-droppable="{multiple: true}">
+                <div class="btn btn-danger" ng-repeat="element in dragDrop.container2" ng-show="element.title"
+                }">{{element.title}}
                 </div>
             </div>
         </div>
     </div>
-    <div class="container form-inline blue">
-        <div class="btn" ng-repeat="element in dragDrop.buttons">
-            <div class="btn btn-info btn-draggable" ng-hide="!element.title">
-                {{element.title}}
+<div class="container form-inline blue" data-drop="true" data-jqyoui-options ng-model="dragDrop.buttons"
+     jqyoui-droppable="{multiple: true}">
+    <div class="btn" ng-repeat="element in dragDrop.buttons">
+        <div class="btn btn-info btn-draggable" ng-hide="!element.title" ng-model="dragDrop.buttons" data-drag="true"
+             jqyoui-draggable="{index: $index, animate:true}" data-jqyoui-options="{index: $index, revert: 'invalid'}">
+        {{element.title}}
             </div>
             <div class="btn btn-default btn-draggable" ng-hide="element.title">drop me here</div>
         </div>
@@ -41,7 +48,11 @@
 </div>
 </body>
 
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/jquery-ui/jquery-ui.js"></script>
 <script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-dragdrop/src/angular-dragdrop.min.js"></script>
+
 <script src="DragDropCtrl.js"></script>
 </body>
 </html>
